--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -8,7 +8,7 @@ on:
 
   push:
     branches:
-    - main
+      - main
 
 jobs:
   generate:
@@ -23,11 +23,15 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
 
+      - name: move pacman output to subfolder
+        run: |
+          mkdir -p dist/pacman
+          mv dist/pacman-contribution-graph*.svg dist/pacman/
 
       - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: dist/pacman
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
